Add automatic module name, bump gradle.
Fixes #61